--- a/cities.html
+++ b/cities.html
@@ -23,6 +23,7 @@
 
   <ol>
     <li>Calgary (1,380,000)</li>
+    <li>Edmonton (1,000,000)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
