--- a/cities.html
+++ b/cities.html
@@ -29,6 +29,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Kyiv (6,000,000)</li>
+    <li>Prague (2,000,000)</li>
   </ol>
 
 </body>
